imported the assets from the core here

--- a/app/Views/index.twig
+++ b/app/Views/index.twig
@@ -1,1 +1,226 @@
-Hie
+{% extends "layouts/master.twig" %}
+
+{% block content %}
+    <!-- banner-section -->
+    <section class="banner-one p_relative pt_150 pb_110">
+        <div class="shape parallax-scene parallax-scene-1">
+            <div data-depth="0.50" class="shape-1 p_absolute w_40 h_40"></div>
+            <div data-depth="0.40" class="shape-2 p_absolute w_40 h_40"></div>
+            <div data-depth="0.50" class="shape-3 p_absolute"></div>
+            <div data-depth="0.30" class="shape-4 p_absolute" style="background-image: url(assets/images/shape/shape-66.png);"></div>
+            <div data-depth="0.40" class="shape-5 p_absolute" style="background-image: url(assets/images/shape/shape-66.png);"></div>
+            <div data-depth="0.30" class="shape-6 p_absolute" style="background-image: url(assets/images/shape/shape-66.png);"></div>
+        </div>
+        <div class="pattern-layer">
+            <div class="pattern-1 p_absolute t_0 r_0" data-parallax='{"x": 100}' style="background-image: url(assets/images/shape/shape-64.png);"></div>
+            <div class="pattern-2 p_absolute t_0 r_0" data-parallax='{"x": 100}' style="background-image: url(assets/images/shape/shape-65.png);"></div>
+        </div>
+        <div class="auto-container">
+            <div class="row align-items-center clearfix">
+                <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                    <div class="content-box p_relative d_block wow slideInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                        <h2 class="p_relative d_block fs_70 lh_80 fw_bold font_family_poppins mb_25">Judgement Enforcement <br /><span class="animation_text_word"></span></h2>
+                        <p class="d_block fs_18 lh_28 font_family_poppins mb_30">We don't get paid until you do...</p>
+                        <div class="btn-box clearfix">
+                            <a href="{{ site_url('contact') }}" class="theme-btn theme-btn-five mr_25">Enforce My Judgement Now <i class="icon-4"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 image-column">
+                    <figure class="image-box p_relative d_block wow slideInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms"><img src="assets/images/resource/vector-2.png" alt=""></figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
+
+
+    <!-- feature-two -->
+    <section class="feature-two p_relative feature-three">
+        <div class="auto-container">
+            <div class="inner-container p_relative d_block b_radius_5 b_shadow_6 pt_50 pr_80 pb_50 pl_80 wow slideInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                <div class="row clearfix">
+                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                        <div class="feature-block-two">
+                            <div class="inner-box p_relative d_block pl_100 pr_50 pt_11 pb_9">
+                                <div class="icon-box p_absolute l_0 t_0 w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1">
+                                    <div class="icon p_relative d_iblock"><i class="icon-6"></i></div>
+                                    <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-22.png" alt=""></div>
+                                </div>
+                                <h4 class="d_block fs_20 lh_30 mb_0">In-house legal counsel</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                        <div class="feature-block-two">
+                            <div class="inner-box p_relative d_block pl_100 pr_50 pt_11 pb_9">
+                                <div class="icon-box p_absolute l_0 t_0 w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1">
+                                    <div class="icon p_relative d_iblock"><i class="icon-7"></i></div>
+                                    <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-23.png" alt=""></div>
+                                </div>
+                                <h4 class="d_block fs_20 lh_30 mb_0">Professional asset investigators</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                        <div class="feature-block-two">
+                            <div class="inner-box p_relative d_block pl_100 pr_50 pt_11 pb_9">
+                                <div class="icon-box p_absolute l_0 t_0 w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1">
+                                    <div class="icon p_relative d_iblock"><i class="icon-8"></i></div>
+                                    <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-24.png" alt=""></div>
+                                </div>
+                                <h4 class="d_block fs_20 lh_30 mb_0">Experienced client service</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- feature-two end -->
+
+
+    <!-- about-four -->
+    <section class="about-four p_relative pt_130" id="about">
+        <div class="auto-container">
+            <div class="row align-items-center clearfix">
+                <div class="col-lg-6 col-md-12 col-sm-12 image-column">
+                    <div class="image-box p_relative d_block">
+                        <div class="shape parallax-scene parallax-scene-2">
+                            <div data-depth="0.50" class="shape-1 p_absolute"></div>
+                            <div data-depth="0.40" class="shape-2 p_absolute w_40 h_40"></div>
+                            <div data-depth="0.30" class="shape-3 p_absolute" style="background-image: url(assets/images/shape/shape-66.png);"></div>
+                            <div data-depth="0.40" class="shape-4 p_absolute" style="background-image: url(assets/images/shape/shape-67.png);"></div>
+                        </div>
+                        <figure class="image p_relative d_block mr_40 wow slideInLeft animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <img src="assets/images/shape/shape-66.png" alt=""></figure>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                    <div class="content_block_four">
+                        <div class="content-box p_relative d_block">
+                            <div class="sec-title-four p_relative d_block mb_25">
+                                <h6 class="d_iblock fs_14 lh_28 fw_sbold font_family_poppins mb_18 b_radius_5">About Us</h6>
+                                <h2 class="d_block fs_40 fw_bold font_family_poppins">A leading judgment collection agency!</h2>
+                            </div>
+                            <div class="text p_relative d_block mb_30">
+                                <p class="font_family_poppins">
+                                    Choose the Asset Repo™ platform to locate, seize, and recover your money judgment. Our experienced enforcement agents utilize proprietary investigative software and in-house attorneys.
+                                </p>
+                                <br>
+                                <p>
+                                    We follow a contemporary approach to traditional practice by using advanced applied science, compliant legal techniques, and persistence.
+                                </p>
+                            </div>
+                            <ul class="list clearfix p_relative d_block mb_30">
+                                <li class="p_relative d_block fs_16 fw_sbold font_family_poppins mb_10 pl_30 pull-left">Clients Focused</li>
+                                <li class="p_relative d_block fs_16 fw_sbold font_family_poppins mb_10 pl_30 pull-left">Superior Technology</li>
+                                <li class="p_relative d_block fs_16 fw_sbold font_family_poppins mb_10 pl_30 pull-left">We Can Save You Money.</li>
+                                <li class="p_relative d_block fs_16 fw_sbold font_family_poppins pl_30 pull-left">100% Secure Services</li>
+                            </ul>
+                            <div class="btn-box">
+                                <a href="{{ site_url('contact') }}" class="theme-btn theme-btn-five">Let's Begin Judgement<i class="icon-4"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about-four end -->
+
+    <!-- testimonial-four -->
+    <section class="testimonial-four p_relative pt_150 pb_140">
+        <div class="pattern-layer">
+            <div class="pattern-1 p_absolute l_0 t_0" style="background-image: url(assets/images/shape/shape-39.png);"></div>
+            <div class="pattern-2 p_absolute r_0 b_0" style="background-image: url(assets/images/shape/shape-40.png);"></div>
+        </div>
+        <div class="auto-container">
+            <div class="three-item-carousel owl-carousel owl-theme owl-nav-none dots-style-one overflow_visible">
+                <div class="testimonial-block-one">
+                    <div class="inner-box p_relative d_block">
+                        <div class="text p_relative d_block b_radius_10 pt_35 pr_40 pb_40 pl_40 mb_30">
+                            <ul class="rating clearfix p_relative d_block mb_15">
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16"><i class="icon-20"></i></li>
+                            </ul>
+                            <p>
+                                You've saved our business!
+                            </p>
+                        </div>
+                        <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
+                            <!--                        <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-1.png" alt=""></figure>-->
+                            <h4 class="d_block fs_20 lh_30 mb_2">Lorelle H.</h4>
+                            <span class="designation p_relative d_block fs_16 lh_20">Kwerkdown LLC</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-block-one">
+                    <div class="inner-box p_relative d_block">
+                        <div class="text p_relative d_block b_radius_10 pt_35 pr_40 pb_40 pl_40 mb_30">
+                            <ul class="rating clearfix p_relative d_block mb_15">
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16"><i class="icon-20"></i></li>
+                            </ul>
+                            <p>
+                                We got scammed a few weeks back, Asset Repo delivered the right judgments to recover.
+                            </p>
+                        </div>
+                        <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
+                            <!--                        <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-2.png" alt=""></figure>-->
+                            <h4 class="d_block fs_20 lh_30 mb_2">- Alidia F.</h4>
+                            <span class="designation p_relative d_block fs_16 lh_20">Ben Dover LLC</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-block-one">
+                    <div class="inner-box p_relative d_block">
+                        <div class="text p_relative d_block b_radius_10 pt_35 pr_40 pb_40 pl_40 mb_30">
+                            <ul class="rating clearfix p_relative d_block mb_15">
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16"><i class="icon-20"></i></li>
+                            </ul>
+                            <p>Daniel didn't miss a thing. We recovered our funds when there was no other option..</p>
+                        </div>
+                        <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
+                            <!--                        <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-3.png" alt=""></figure>-->
+                            <h4 class="d_block fs_20 lh_30 mb_2">Julian Z.</h4>
+                            <span class="designation p_relative d_block fs_16 lh_20">Esprx Inc</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-block-one">
+                    <div class="inner-box p_relative d_block">
+                        <div class="text p_relative d_block b_radius_10 pt_35 pr_40 pb_40 pl_40 mb_30">
+                            <ul class="rating clearfix p_relative d_block mb_15">
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16 mr_5"><i class="icon-20"></i></li>
+                                <li class="p_relative d_iblock pull-left fs_16"><i class="icon-20"></i></li>
+                            </ul>
+                            <p>
+                                Very happy with their service. A little expensive but worth it.
+                            </p>
+                        </div>
+                        <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
+                            <!--                        <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-3.png" alt=""></figure>-->
+                            <h4 class="d_block fs_20 lh_30 mb_2">Sophi C.</h4>
+                            <span class="designation p_relative d_block fs_16 lh_20">Villion LLC</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial-four -->
+{% endblock %}
