--- a/app/Views/partials/preloader.twig
+++ b/app/Views/partials/preloader.twig
@@ -1,1 +1,30 @@
-header.twig
+<!-- preloader -->
+<div class="loader-wrap">
+    <div class="preloader">
+        <div class="preloader-close">x</div>
+        <div id="handle-preloader" class="handle-preloader home-4">
+            <div class="animation-preloader">
+                <div class="spinner"></div>
+                <div class="txt-loading">
+                    <span data-text-preloader="a" class="letters-loading">
+                        a
+                    </span>
+                    <span data-text-preloader="s" class="letters-loading">
+                        s
+                    </span>
+                    <span data-text-preloader="s" class="letters-loading">
+                        s
+                    </span>
+                    <span data-text-preloader="e" class="letters-loading">
+                        e
+                    </span>
+                    <span data-text-preloader="t" class="letters-loading">
+                        t
+                    </span>
+                </div>
+                <h3 class="text-white text-center">REPO</h3>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- preloader end -->
