done with the application

--- a/app/Views/partials/preloader.twig
+++ b/app/Views/partials/preloader.twig
@@ -21,6 +21,9 @@
                     <span data-text-preloader="t" class="letters-loading">
                         t
                     </span>
+                    <span data-text-preloader="s" class="letters-loading">
+                        s
+                    </span>
                 </div>
                 <h3 class="text-white text-center">REPO</h3>
             </div>
