--- a/app/Views/partials/header.twig
+++ b/app/Views/partials/header.twig
@@ -2,7 +2,7 @@
 <!-- <div id="search-popup" class="search-popup">
     <div class="popup-inner">
         <div class="upper-box clearfix">
-            <figure class="logo-box pull-left"><a href="{{ site_url("/") }}"><img src="assets/images/logo-6.png" alt=""></a></figure>
+            <figure class="logo-box pull-left"><a href="{{ site_url("/") }}"><img src="assets/logo-6.png" alt=""></a></figure>
             <div class="close-search pull-right"><span class="icon-179"></span></div>
         </div>
         <div class="overlay-layer"></div>
@@ -34,7 +34,7 @@
                 <div class="sidebar-info-contents">
                     <div class="content-inner">
                         <div class="logo">
-                            <a href="{{ site_url("/") }}"><img src="assets/images/logo-6.png" alt=""/></a>
+                            <a href="{{ site_url("/") }}"><img src="assets/logo-6.png" alt=""/></a>
                         </div>
                         <!--                        <div class="text-box">-->
                         <!--                            <h4>About Atrix</h4>-->
@@ -66,7 +66,7 @@
         <div class="outer-container">
             <div class="outer-box">
                 <div class="logo-box">
-                    <figure class="logo"><a href="{{ site_url("/") }}"><img src="assets/images/logo-6.png"
+                    <figure class="logo"><a href="{{ site_url("/") }}"><img src="assets/logo-6.png"
                                                                             alt=""></a></figure>
                 </div>
                 <div class="menu-area clearfix">
@@ -111,7 +111,7 @@
         <div class="outer-container">
             <div class="outer-box">
                 <div class="logo-box">
-                    <figure class="logo"><a href="{{ site_url("/") }}"><img src="assets/images/logo-6.png"
+                    <figure class="logo"><a href="{{ site_url("/") }}"><img src="assets/logo-6.png"
                                                                             alt=""></a></figure>
                 </div>
                 <div class="menu-area clearfix">
@@ -139,7 +139,7 @@
     <div class="close-btn"><i class="fas fa-times"></i></div>
 
     <nav class="menu-box">
-        <div class="nav-logo"><a href="{{ site_url("/") }}"><img src="assets/images/mobile-logo.png" alt=""
+        <div class="nav-logo"><a href="{{ site_url("/") }}"><img src="assets/logo-6-white.png" alt=""
                                                                  title=""></a></div>
         <div class="menu-outer">
             <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
